# PandoraRemote

./: .gitignore  README.md  run-emulator.sh
android-companion/: build.gradle  settings.gradle
android-companion/app/: build.gradle
android-companion/app/src/main/: AndroidManifest.xml
android-companion/app/src/main/java/com/pandoraremote/: MainActivity.java  PandoraNotificationListener.java  PebbleCommService.java
android-companion/app/src/main/res/layout/: activity_main.xml
android-companion/app/src/main/res/menu/: main_menu.xml
android-companion/app/src/main/res/values/: strings.xml
appstore/: description.txt  metadata.json
companion-emulator/: README.md  pyproject.toml
companion-emulator/src/companion_emulator/: __main__.py  cli.py  connection.py  playlist.py  protocol.py  state_machine.py  ui.py
pebble-app/: README.md  package.json
pebble-app/src/c/: pebble-app.c
