[project]
name = "pandora-remote-companion-emulator"
version = "0.1.0"
description = "Pebble emulator companion for PandoraRemote development"
requires-python = ">=3.10"
dependencies = [
    "libpebble2>=0.0.26",
    "rich>=13.0",
]

[project.scripts]
pandora-companion = "companion_emulator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
